# gqlmapi

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  SUPPORT.md  vcpkg.json
.github/workflows/: windows.yml
mapistub/: CMakeLists.txt
mapistub/cmake/: CMakeLists.txt
schema/: AttachmentObject.cpp  AttachmentObject.h  BinaryValueObject.cpp  BinaryValueObject.h  BoolValueObject.cpp  BoolValueObject.h  CMakeLists.txt  ConversationObject.cpp  ConversationObject.h  DateTimeValueObject.cpp  DateTimeValueObject.h  FileAttachmentObject.cpp  FileAttachmentObject.h  FolderAddedObject.cpp  FolderAddedObject.h  FolderChangeObject.cpp  FolderChangeObject.h  FolderObject.cpp  FolderObject.h  FolderRemovedObject.cpp  FolderRemovedObject.h  FolderUpdatedObject.cpp  FolderUpdatedObject.h  FoldersReloadedObject.cpp  FoldersReloadedObject.h  GuidValueObject.cpp  GuidValueObject.h  IntIdObject.cpp  IntIdObject.h  IntValueObject.cpp  IntValueObject.h  ItemAddedObject.cpp  ItemAddedObject.h  ItemChangeObject.cpp  ItemChangeObject.h  ItemObject.cpp  ItemObject.h  ItemRemovedObject.cpp  ItemRemovedObject.h  ItemUpdatedObject.cpp  (+34 more)
src/: BinaryValue.cpp  BoolValue.cpp  CMakeLists.txt  CheckResult.cpp  CheckResult.h  DateTime.cpp  DateTime.h  DateTimeValue.cpp  Folder.cpp  FolderAdded.cpp  FolderRemoved.cpp  FolderUpdated.cpp  FoldersReloaded.cpp  Guid.cpp  Guid.h  GuidValue.cpp  Input.cpp  Input.h  IntId.cpp  IntValue.cpp  Item.cpp  ItemAdded.cpp  ItemRemoved.cpp  ItemUpdated.cpp  ItemsReloaded.cpp  ItemsSubscription.cpp  MAPIGuid.cpp  Mutation.cpp  NamedId.cpp  Property.cpp  Query.cpp  RootFoldersSubscription.cpp  Service.cpp  Session.cpp  Store.cpp  StringId.cpp  StringValue.cpp  SubFoldersSubscription.cpp  Subscription.cpp  TableDirectives.cpp  (+3 more)
src/include/: MAPIGraphQL.h
test/: CMakeLists.txt  DateTimeTest.cpp  GuidTest.cpp  InputTest.cpp  MockObjects.cpp  MockObjects.h  SchemaTest.cpp  UnicodeTest.cpp  gmock_main.cpp
